# Advent-of-Code

./: .clang-format  .gitignore  Cargo.toml  base.cpp  createDay.sh  create_day.sh
2022/: .clang-format
2022/day_10/: 10_1.cpp
2022/day_11/: 11_1.cpp
2022/day_12/: 12_1.cpp  12_2.cpp
2022/day_13/: 13_1.cpp  13_2.cpp
2022/day_14/: 14_1.cpp
2022/day_15/: 15_1.cpp  helper.cpp
2022/day_16/: 16_1.cpp  16_2.cpp
2022/day_17/: 17_1.cpp
2022/day_18/: 18_2.cpp
2022/day_19/: 19_1.cpp  19_2.cpp
2022/day_2/: 2_1.cpp
2022/day_20/: 20_1.cpp  20_2.cpp
2022/day_21/: 21_2.cpp
2022/day_22/: 22_2.cpp
2022/day_23/: 23_1.cpp  rf.cpp
2022/day_24/: 24_1.cpp
2022/day_25/: 25_2.cpp
2022/day_4/: 4_1.cpp  4_2.cpp
2022/day_5/: 5_1.cpp  5_2.cpp
2022/day_6/: 6_1.cpp
2022/day_7/: 7_1.cpp
2022/day_8/: 8_1.cpp  8_2.cpp
2022/day_9/: 9_1.cpp  9_2.cpp
2023/: Cargo.toml
2023/src/: lib.rs
2023/src/day_1/: main.rs
2023/src/day_10/: main.rs
2023/src/day_11/: main.rs
2023/src/day_12/: main.rs
2023/src/day_13/: main.rs
2024/: Cargo.toml  create_day.sh
2024/src/: lib.rs
aoc_2024/: Cargo.toml
day_1/: 1.cpp
day_10/: 10_2.cpp
day_11/: 11_2.cpp
day_14/: 14_2.cpp
day_15/: 15_2.cpp
day_17/: 17_2.cpp
day_18/: 18_1.cpp
day_2/: 2_2.cpp
day_21/: 21_1.cpp
day_22/: 22_1.cpp
day_24/: cp.cpp
day_25/: 25_1.cpp
day_3/: 3_1.cpp  3_2.cpp
day_6/: 6_2.cpp
day_7/: 7_2.cpp
src/day_13/: tt.py
src/day_14/: main.rs
src/day_16/: main.rs
src/day_18/: main.rs
src/day_19/: main.py  main.rs
src/day_4/: main.rs
src/day_6/: main.rs
src/day_7/: main.rs
src/day_8/: main.rs
src/day_9/: main.rs
(+18 files in other folders)
